# jasm

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  shell.nix
.github/workflows/: main.yml
asm/: BUILD.bazel
asm/src/main/java/io/github/ffortier/jasm/asm/: Transpiler.java
asm/src/test/java/io/github/ffortier/jasm/asm/: TranspilerTest.java
basic/: README.md
basic/examples/: BUILD.bazel  hello.bas
basic/parser/: BUILD.bazel
basic/parser/src/main/java/jasm/basic/parser/: BasicParsers.java  Input.java  Instruction.java  Main.java  Parser.java  ParserException.java  Parsers.java  Result.java  Tuple.java  Value.java
binary/: BUILD.bazel  instruction.c  prepreprocessor.py
binary/src/main/java/io/github/ffortier/jasm/binary/: BinaryReader.java  Code.java  Export.java  ExportDesc.java  Expr.java  FuncType.java  Import.java  ImportDesc.java  Limits.java  Module.java  Section.java  ValType.java  WebAssembly.java
binary/src/main/java/jasm/binary/: Code.java  DataSegment.java  Export.java  Import.java  Section.java  Type.java
binary/src/test/java/io/github/ffortier/jasm/binary/: WebAssemblyTest.java
common/: BUILD.bazel
common/src/main/java/jasm/common/: Records.java
common/src/main/java/jasm/io/: BinaryReader.java
hello/: BUILD.bazel  hello.wat
instruction/: BUILD.bazel  instructions_codegen.py  mypy.ini  mypy.sh  wasm-opcodes.c
instruction/java/: BUILD.bazel  ast.py
jvm/: BUILD.bazel
jvm/src/main/java/jasm/jvm/: ClassFile.java  ClassLoaderBuilder.java  JasmClassLoader.java  Main.java
parsers/binary/: BUILD.bazel  README.md
parsers/binary/src/main/java/jasm/binary/: Code.java  DataSegment.java  Export.java  Import.java  Main.java  Module.java  Section.java  Type.java
parsers/instruction/: BUILD.bazel  instructions_codegen.py
parsers/instruction/src/main/java/jasm/instruction/: BinaryReader.java  ProgramState.java
runtime/: BUILD.bazel  README.md
runtime/src/main/java/io/github/ffortier/jasm/runtime/: DataInstance.java  ElemInstance.java  FuncInstance.java  GlobalInstance.java  MemInstance.java  ModuleInstance.java  Store.java  TableInstance.java
runtime/src/main/java/jasm/runtime/: FuncInstance.java  Index.java  Memory.java  Module.java  Store.java  StoreItem.java
