load("@rules_jvm_external//:defs.bzl", "artifact")
load("//tools/java:defs.bzl", "java_project")

java_project(
    name = "asm",
    test_data = [
        "//jasm:hello.wasm",
    ],
    test_env = {
        "TEST_HELLO_WASM": "$(location //jasm:hello.wasm)",
    },
    visibility = ["//jasm:__subpackages__"],
    deps = [
        "//jasm/binary",
        artifact("org.ow2.asm:asm"),
        artifact("org.ow2.asm:asm-util"),
    ],
)
